# hermes-voice-ha-integration

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  hacs.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
addon/: Dockerfile  build.yaml  config.yaml  hacs.json  repository.json  run.sh
custom_components/hermes/: __init__.py  config_flow.py  const.py  conversation.py  frontend.py  manifest.json  sensor.py  services.py  services.yaml  strings.json  websocket.py
custom_components/hermes/conversation/: agent.py
custom_components/hermes/hacsfiles/: hermes_action_bar.js
custom_components/hermes/translations/: en.json
docs/: config-flow-ui-mockup.html  release.md  ws-protocol.md  ws-receiver.md
plugins/: __init__.py
plugins/home_assistant/: README.md  __init__.py  compound.py  discovery.py  event_watcher.py  ha_assistant.py  plugin.yaml  security.py  status_sensors.py
plugins/voice-stack/: __init__.py  audio.py  plugin.yaml
plugins/voice_stack/: README.md  __init__.py  audio.py  pipeline.py  plugin.yaml  ws_receiver.py
plugins/voice_stack/engines/: __init__.py  stt.py  tts.py  wake_word.py
scripts/: check_release_integrity.py
skills/homescript/: SKILL.md
tests/: test_ha_component_wiring.py  test_ha_services.py  test_plugin.py  test_release_integrity.py
