[project]
name = "hermes-voice-ha-integration"
version = "0.0.5"
description = "Home Assistant voice stack integration for Hermes Agent"
authors = [{name = "Sam Russell", email = "sam.russell@samprim.net"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "PyYAML>=6.0",
    "build>=1.2",
]

voice = [
    "edge-tts>=6.1",
    "sounddevice>=0.4",
    "numpy>=1.26",
]

voice-stt = [
    "faster-whisper>=1.0",
]

voice-wake = [
    "pvporcupine>=3.0",
    "pyaudio>=0.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["plugins*"]
exclude = ["addon*", "custom_components*", "skills*", "tests*"]

[tool.setuptools.package-data]
"plugins.home_assistant" = ["plugin.yaml", "README.md"]
"plugins.voice_stack" = ["plugin.yaml", "README.md"]
